--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
         Log in to see your spending history and plan your semester accordingly.
     </p>
 
-    <p><a href="{{url_for('login')}}"><button type="button" class="btn btn-outline-info btn-lg">Login</button></a>
+    <p><a href="{{url_for('login')}}"><button type="button" class="btn btn-outline-danger btn-lg">Login</button></a>
 
 
 {% endblock %}
